# graph_survival_analysis

./: .gitignore  pyproject.toml
configs/: eval_survival.yaml  train_graphs.yaml  train_survival.yaml
configs/data/: cora.yaml  features_gauthier.yaml  features_gauthier_graph.yaml
configs/experiment/: eval_dgm.yaml
configs/local/: default.yaml
configs/logger/: wandb.yaml
configs/model/: GAT.yaml  dgm.yaml  survival.yaml
configs/paths/: default.yaml  features_gauthier.yaml
configs/trainer/: default.yaml
src/survival_analysis/data/: cora_datamodule.py  features_gauthier_datamodule.py  gauthier_graph_datamodule.py  load_data.py  splitter.py
src/survival_analysis/experiments/: eval.py  eval_survival.py  evaluate_dgm.py  train.py  train_graph.py  train_survival.py
src/survival_analysis/models/: dgm_model.py  graph_module.py  survival_module.py
src/survival_analysis/utils/: instantiators.py  logging_utils.py  rich_utils.py  train_test.py  utils.py
