[project]
name = "survival-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pycox>=0.3.0",
    "python-louvain>=0.16",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scikit-survival>=0.26.0",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "wandb>=0.25.1",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
